[package]
name = "magiceden-client-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json"
] }

serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "preserve_order",
] }
serde_url_params = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }
