[package]
name = "magiceden-client-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1.0.213", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

chrono = { version = "0.4.38", features = ["serde"] }
serde_json = { version = "1.0.132", features = ["arbitrary_precision", "preserve_order"] }
serde_url_params = "0.2.1"
thiserror = "1.0.65"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros"] }
